Update: Added health route  and docs
