# server/src/routes/health.routes.js
@@ -1,0 +1,6 @@
+import express from 'express'
+import { getHealth } from '../controller/health.controller.js'
+
+export const healthRouter = express.Router()
+
+healthRouter.get('/', getHealth)
